force-app/main/default/objects/Order_Product__c/Order_Product__c.object-meta.xml
<CustomObject>
    <label>Order Product</label>
    <nameField>
        <label>Order Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>