force-app/main/default/objects/Order_Product__c/fields/Backorder__c.field-meta.xml
<CustomField>
    <fullName>Backorder__c</fullName>
    <label>Backorder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>