force-app/main/default/objects/Order_Product__c/fields/LineDescription__c.field-meta.xml
<CustomField>
    <fullName>LineDescription__c</fullName>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>