force-app/main/default/objects/Order_Product__c/fields/LineStatus__c.field-meta.xml
<CustomField>
    <fullName>LineStatus__c</fullName>
    <label>Line Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>