force-app/main/default/objects/Order_Product__c/fields/Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Number__c</fullName>
    <label>Order Line Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>