force-app/main/default/objects/Order_Product__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>