force-app/main/default/objects/Order_Product__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>