force-app/main/default/objects/Order_Product__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>