force-app/main/default/objects/Order_Product__c/fields/UniqueOrderProductID__c.field-meta.xml
<CustomField>
    <fullName>UniqueOrderProductID__c</fullName>
    <externalId>true</externalId>
    <label>Unique  Order Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>