force-app/main/default/objects/Order_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsDeleted__c</columns>
    <columns>LineStatus__c</columns>
    <columns>ListPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>