force-app/main/default/objects/Order_Product__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>ProductCode__c</columns>
    <columns>UniqueOrderProductID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>